--- a/sass/style.scss
+++ b/sass/style.scss
@@ -4,7 +4,7 @@ Theme URI: https://byintention.co
 Description: Design by Arka, Wordpress theme by Nick at Intention, plugins by Lifetap
 Author: Nick "Badger" Hayward
 Author URI: https://byintention.co
-Version: 1.13
+Version: 1.14
 Tags: 
 License: GPL3
 License URI: https://www.gnu.org/licenses/gpl-3.0.html
@@ -1990,38 +1990,87 @@ html .wcpt-product-form select {
 
 html {
 	
-	#tribe-events-pg-template {
-		max-width:800px;
-	}
-	
-	.tribe-events-page-template {
+	// Single event
+	.single-tribe_events {
 		padding-top:100px;
 		
-		.tribe-events-notices {
-			ul {
-				list-style:none;
-				margin:0;
-				li {
-					margin-bottom:10px;
+		.contentWrap {
+			background: #fafafa;
+		}
+		
+		#tribe-events-pg-template {
+			max-width:800px;
+			
+			.tribe-events-schedule h2 {
+				font-size:20px;
+			}
+			
+			.tribe-events-notices {
+				ul {
+					list-style:none;
+					margin:0;
+					li {
+						margin-bottom:10px;
+					}
 				}
+			}
+			
+			.tribe-events-c-subscribe-dropdown__container {
+				display: none;
+			}
+			
+			.tribe_events {
+				overflow: visible;
+			}
+			
+			
+		}
+
+		.tcb_briefing {
+			background: #fff;
+			box-shadow: 0 0 10px rgba(0,0,0,0.07);
+			margin-bottom: 30px;
+			padding:30px;
+			h3 {
+				margin-bottom:10px;
+				padding-top:30px;
 			}
 		}
 		
-		.tribe-events-schedule h2 {
-			font-size:20px;
-		}
+		
+		
 	}
+	
+	
+
+	
+	
+	
 	.tribe-events-view--list {
+		
+		background: #fafafa;
+		
+		#eventListingTitle {
+			flex: 0 0 100%;
+			margin-bottom: 30px;
+			text-align: center;
+		}
 		
 		.tribe-events-l-container {
 			max-width:800px;
 		}
 		
-		.tribe-events-c-events-bar {
-			display:none;
-		}
-		.tribe-events-c-subscribe-dropdown__container {
-			display:none;
+		.tribe-events-header {
+			
+			.tribe-events-c-top-bar {
+				display:none;
+			}
+			.tribe-events-c-events-bar {
+				display:none;
+			}
+			.tribe-events-c-subscribe-dropdown__container {
+				display:none;
+			}
 		}
 		
 		.tribe-events-calendar-list {
@@ -2062,7 +2111,8 @@ html {
 			font-size:inherit;
 			font-family: inherit;
 		}
-	}	
+	}
+	
 	.tribe-events-event-meta {
 		display: none;
 	}
@@ -2093,12 +2143,14 @@ html {
 	.tribe-common-g-row.tribe-events-calendar-list__event-row,
 	.tribe-common-g-row.tribe-events-calendar-latest-past__event-row {
 		align-items: flex-start;
-		box-shadow: 0 0 10px rgba(0,0,0,0.1);
-		padding: 20px;
+		background: #fff;
+		box-shadow: 0 0 10px rgba(0,0,0,0.07);
+		padding: 30px;
 		.tribe-events-calendar-list__event-date-tag,
 		.tribe-events-calendar-latest-past__event-date-tag {
 			background: $colour-link;
 			color: #fff;
+			font-weight: $bold;
 			padding: 10px;
 			time {
 				padding: 0;
@@ -2124,9 +2176,10 @@ html {
 */
 
 #attendanceRoster {
-	background:#eee;
-	margin-bottom:30px;
-	padding:20px;
+	background: #fff;
+	box-shadow: 0 0 10px rgba(0,0,0,0.1);
+	margin-bottom: 30px;
+	padding:30px;
 	transition:all 0.2s linear;
 	a,
 	input,
@@ -2135,16 +2188,18 @@ html {
 	}
 	
 	.attendanceCol {
-		border: 1px solid #ddd;
 		margin-bottom: 20px;
-		padding: 10px 10px 80px 10px;
+		padding: 0 0 80px 0;
 		position: relative;
 		form {
 			margin: 0;
 			position: absolute;
 				bottom: 10px;
-				left: 10px;
+				left: 0;
 			width: 100%;
+			input {
+				padding: 10px;
+			}
 		}
 	}
 	ul {
@@ -2196,9 +2251,10 @@ html {
 */
 
 #slotTool {
-	background:#efefef;
-	margin-bottom:50px;
-	padding:20px;
+	background: #fff;
+	box-shadow: 0 0 10px rgba(0,0,0,0.1);
+	margin-bottom: 30px;
+	padding:30px;
 }
 
 .slotToolSlot {
@@ -2229,7 +2285,14 @@ input[type="submit"].slotIcon {
 	}
 }
 
-
+#slotToolButtons {
+	padding: 30px;
+	text-align: center;
+	br {
+		display: none;
+		
+	}
+}
 
 
 
@@ -2239,13 +2302,7 @@ input[type="submit"].slotIcon {
 	margin-bottom:30px;
 }
 
-.tcb_briefing {
-	padding-bottom:50px;
-	h3 {
-		margin-bottom:10px;
-		padding-top:30px;
-	}
-}
+
 
 
 
